--- a/LUMSLife/backend/package.json
+++ b/LUMSLife/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "All functions to be used by the front end components are initially defined within the api.js file\r Functions inside the api.js file send get/post/delete/patch requests to the server\r These requests are handled in the server.js file\r Requests are routed using the routes.js file into functions defined within the controller folder",
   "main": "server.js",
-  "type": "module",
+  "type": "commonjs",
   "dependencies": {
     "abbrev": "^1.1.1",
     "accepts": "^1.3.8",
@@ -36,6 +36,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
