--- a/LUMSLife/backend/package.json
+++ b/LUMSLife/backend/package.json
@@ -73,7 +73,8 @@
     "mysql2": "^2.3.3",
     "named-placeholders": "^1.1.2",
     "negotiator": "^0.6.3",
-    "nodemon": "^2.0.20",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22",
     "nopt": "^1.0.10",
     "normalize-path": "^3.0.0",
     "object-inspect": "^1.12.2",
@@ -96,6 +97,7 @@
     "semver": "^5.7.1",
     "send": "^0.18.0",
     "seq-queue": "^0.0.5",
+    "sequelize": "^6.30.0",
     "serve-static": "^1.15.0",
     "setprototypeof": "^1.2.0",
     "sha1": "^1.1.1",
