--- a/LUMSLife/frontend/package.json
+++ b/LUMSLife/frontend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "form-data": "^4.0.0",
     "mobiscroll": "^3.0.0-beta6",
+    "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-icons": "^1.10.2",
@@ -28,6 +29,7 @@
     "react-datetime": "^3.2.0",
     "react-datetime-picker": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^2.1.3",
     "react-select": "^5.6.1",
