--- a/LUMSLife/frontend/package.json
+++ b/LUMSLife/frontend/package.json
@@ -41,6 +41,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "xcopy /E /I /Y build ..\\backend\\public",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
