Initial commit for Heroku deployment

--- a/LUMSLife/.env
+++ b/LUMSLife/.env
@@ -1,5 +1,9 @@
-PORT=3000
-HOST=localhost
-USER=root
-PASSWORD=pass
-DATABASE=lumslife
+# PORT=3000
+# HOST=localhost
+# USER=root
+# PASSWORD=pass
+# DATABASE=lumslife
+USER=b56b7f6e95a711
+PASSWORD=5ae78087
+HOST=us-cdbr-east-06.cleardb.net
+DATABASE=heroku_5f351f682ab32a1
