Initial commit for heroku deployment

--- a/LUMSLife/package.json
+++ b/LUMSLife/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "cd backend && npm run server",
     "app": "cd frontend && npm run start",
-   
+    "heroku-postbuild": "npm install --prefix backend && npm install --prefix frontend",
     "start": "cd backend && node server.js"
   },
   "repository": {
