--- a/LUMSLife/.env
+++ b/LUMSLife/.env
@@ -7,4 +7,4 @@ USER=b56b7f6e95a711
 PASSWORD=5ae78087
 HOST=us-cdbr-east-06.cleardb.net
 DATABASE=heroku_5f351f682ab32a1
-REACT_APP_API_BASE_URL=https://guarded-river-13886.herokuapp.com
+REACT_APP_API_BASE_URL=https://guarded-river-13886.herokuapp.com/api
